--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <h1>Hey</h1>
+
+
+<img src="pics_for_apps/AI.png" width="145" height="126" alt="Planets" usemap="#planetmap">
+
+<map name="planetmap">
+  <area shape="rect" coords="0,0,82,126" href="sun.htm" alt="Sun">
+  <area shape="circle" coords="90,58,3" href="mercur.htm" alt="Mercury">
+  <area shape="circle" coords="124,58,8" href="venus.htm" alt="Venus">
+</map>
