make image bigger

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>Hey</h1>
 
 
-<img src="pics_for_apps/AI.png" usemap="#aimap">
+<img src="pics_for_apps/AI.png" width="415" height="613" usemap="#aimap">
 
 <map name="aimap">
   <area shape="rect" coords="0,0,82,126" href="sun.htm" alt="Sun">
