--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<h1>Hey</h1>
+<h1>Hey Hover Over to the three AIs</h1>
 
 
-<img src="pics_for_apps/AI.png" width="415" height="613" usemap="#aimap">
+<img src="pics_for_apps/AI.png"usemap="#aimap">
 
 <map name="aimap">
-  <area shape="rect" coords="0,0,82,126" href="sun.htm" alt="Sun">
-  <area shape="circle" coords="90,58,3" href="mercur.htm" alt="Mercury">
-  <area shape="circle" coords="124,58,8" href="venus.htm" alt="Venus">
+  <area shape="rect" coords="0,0,82,126" href="sun.htm" alt="Tensor">
+  <area shape="rect" coords="90,58,3" href="mercur.htm" alt="Alexa">
+  <area shape="rect" coords="124,58,8" href="venus.htm" alt="Watson">
 </map>
