--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<h1>Hey Hover Over to the three AIs</h1>
 
 
-<img src="pics_for_apps/AI.png"usemap="#aimap">
-
-<map name="aimap">
-  <area shape="rect" coords="0,0,82,126" href="sun.htm" alt="Tensor">
-  <area shape="rect" coords="90,58,3" href="mercur.htm" alt="Alexa">
-  <area shape="rect" coords="124,58,8" href="venus.htm" alt="Watson">
-</map>
+<img src="pics_for_apps/artificial-intelligence-2167835_1920.png"usemap="#aimap">
