--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 
 
-<img src="pics_for_apps/artificial-intelligence-2167835_1920.png"usemap="#aimap">
+<img src="pics_for_apps/artificial-intelligence-2167835_1920.jpg"usemap="#aimap">
